fix: dialogue box sizing for better alignment with pixel grid

--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,9 @@ canvas {
 #txt-box {
     position: absolute;
     
-    left: 8%;
-    right: 8%;
-    bottom: 3.5%; 
+    left: 7.8%;
+    right: 7.8%;
+    bottom: 3.4%; 
     height: 26%;
     
     background-color: #F8F8F8;
@@ -40,7 +40,7 @@ canvas {
     border-image-slice: 18;
     border-image-repeat: repeat;
 
-    box-shadow: 14px 14px black;
+    box-shadow: 0.8rem 0.8rem black;
 
     image-rendering: pixelated;
 }
